fix address of image

--- a/webVersione/index.html
+++ b/webVersione/index.html
@@ -15,7 +15,7 @@
             <header class="header">
                 <menu class="header__menu menu">
                     <div class="menu__logo logo">
-                        <img src="/img/ico/logo.svg" alt="logo">
+                        <img src="img/ico/" alt="logo">
                     </div>
                     <ul class="menu__items">
                         <li class="menu__item"><a href="#">Home</a></li>
@@ -23,7 +23,7 @@
                         <li class="menu__item"><a href="#">Contacts</a></li>
                     </ul>
                     <div class="menu__burger">
-                        <img src="/img/ico/burgerMenu.svg" alt="menu">
+                        <img src="img/ico/burgerMenu.svg" alt="menu">
                     </div>
                 </menu>
             </header>
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <div class="block-main__image">
-                            <img src="/img/main/main-image.png" alt="sport woomen">
+                            <img src="img/main/main-image.png" alt="sport woomen">
                         </div>
                     </div>
                 </section>
