--- a/webVersione/index.html
+++ b/webVersione/index.html
@@ -15,7 +15,7 @@
             <header class="header">
                 <menu class="header__menu menu">
                     <div class="menu__logo logo">
-                        <img src="img/ico/logo.svg" alt="logo">
+                        <img src="img/logo/logo.svg" alt="logo">
                     </div>
                     <ul class="menu__items">
                         <li class="menu__item"><a href="#">Home</a></li>
