add adaptive for main block

--- a/webVersione/index.html
+++ b/webVersione/index.html
@@ -18,9 +18,9 @@
                         <img src="img/logo/logo.svg" alt="logo">
                     </div>
                     <ul class="menu__items">
-                        <li class="menu__item"><a href="#">Home</a></li>
-                        <li class="menu__item"><a href="#">Training</a></li>
-                        <li class="menu__item"><a href="#">Contacts</a></li>
+                        <li class="menu__item"><a href="#">Casa</a></li>
+                        <li class="menu__item"><a href="#">Formazione</a></li>
+                        <li class="menu__item"><a href="#">Contatti</a></li>
                     </ul>
                     <div class="menu__burger">
                         <img src="img/ico/burgerMenu.svg" alt="menu">
@@ -32,29 +32,33 @@
                 <section class="main__block block-main">
                     <div class="block-main__container">
                         <div class="block-main__titles titles-main">
-                            <h3 class="titles-main__subTitle">__Fitness Club</h3>
-                            <h1 class="titles-main__title">Sweat, Smile
-                                And Repeat</h1>
-                            <p class="titles-main__text">A gym is a club, building, or large room, usually containing
-                                special equipment, where people go to</p>
+                            <h3 class="titles-main__subTitle">__Palestriamoci</h3>
+                            <h1 class="titles-main__title">Sudare, Sorridere e Ripetere</h1>
+                            <p class="titles-main__text">Allenamento contro Re è un programma di fitness in uno spazio
+                                dedicato, che combina esercizi aerobici, stretching e allenamento della mobilità.
+                                L'obiettivo è migliorare la salute cardiovascolare, la flessibilità, il movimento delle
+                                articolazioni e ridurre i rischi di lesioni per un'esperienza di fitness completa.</p>
                             <div class="block-main__buttons">
                                 <button class="btn btn__red">
                                     <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
                                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                                     </svg>
-                                    <span>Join Now</span>
+                                    <span>Iscriviti ora</span>
                                 </button>
                                 <button class="btn btn__white">
                                     <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
                                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                                     </svg>
-                                    <span>Know More</span>
+                                    <span>Saperne di più</span>
                                 </button>
                             </div>
                         </div>
                         <div class="block-main__image">
+                            <div class="image-main">
+
+                            </div>
                             <img src="img/main/main-image.png" alt="sport woomen">
                         </div>
                     </div>
