--- a/webVersione/index.html
+++ b/webVersione/index.html
@@ -34,10 +34,9 @@
                         <div class="block-main__titles titles-main">
                             <h3 class="titles-main__subTitle">__Palestriamoci</h3>
                             <h1 class="titles-main__title">Sudare, Sorridere e Ripetere</h1>
-                            <p class="titles-main__text">Allenamento contro Re è un programma di fitness in uno spazio
-                                dedicato, che combina esercizi aerobici, stretching e allenamento della mobilità.
-                                L'obiettivo è migliorare la salute cardiovascolare, la flessibilità, il movimento delle
-                                articolazioni e ridurre i rischi di lesioni per un'esperienza di fitness completa.</p>
+                            <p class="titles-main__text">Palestriamoci è un'app innovativa per appassionati di fitness e
+                                atleti, che consente di ottimizzare gli allenamenti attraverso programmi personalizzati,
+                                basati su obiettivi, livello di forma e preferenze.</p>
                             <div class="block-main__buttons">
                                 <button class="btn btn__red">
                                     <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
@@ -59,7 +58,59 @@
                             <div class="image-main">
 
                             </div>
-                            <img src="img/main/main-image.png" alt="sport woomen">
+                            <img src="img/main/mainBlock/main-image5.webp" alt="sport woomen">
+                        </div>
+                    </div>
+                </section>
+
+                <section class="main__StepByStep block-StepByStep">
+                    <div class="block-StepByStep__container">
+                        <div class="block-StepByStep__titles titles-main">
+                            <h3 class="titles-main__subTitle">Passo dopo passo</h3>
+                            <h2 class="titles-main__title">Come iniziare</h2>
+                        </div>
+                        <div class="block-StepByStep__cards ">
+                            <div class="cards-services">
+                                <div class="card-service">
+                                    <div class="card-service__image">
+                                        <img src="img/main/StepByStep/number-1.png" alt="number 1">
+                                    </div>
+                                    <div class="card-service__title">Scarica l'app o accedi</div>
+                                    <div class="card-service__text">Palestriamoci è disponibile per il download su
+                                        <a href="#" class="link-red">Android</a> o sul sito web. È sufficiente
+                                        installarla sul proprio
+                                        dispositivo mobile
+                                        ed effettuare una rapida registrazione o il <a href="#"
+                                            class="link-red">login</a> attraverso il sito web.
+                                    </div>
+                                </div>
+                                <div class="card-service">
+                                    <div class="card-service__image">
+                                        <img src="img/main/StepByStep/number-2.png" alt="number 2">
+                                    </div>
+                                    <div class="card-service__title">Creare la prima scheda di formazione</div>
+                                    <div class="card-service__text">Utilizzate l'interfaccia intuitiva per selezionare
+                                        gli esercizi, impostare i parametri di allenamento e creare il vostro primo
+                                        piano.</div>
+                                </div>
+                                <div class="card-service">
+                                    <div class="card-service__image">
+                                        <img src="img/main/StepByStep/number-3.png" alt="number 3">
+                                    </div>
+                                    <div class="card-service__title">Iniziare la formazione</div>
+                                    <div class="card-service__text">Seguite il vostro piano utilizzando le istruzioni
+                                        dettagliate e le linee guida per gli esercizi fornite dall'app.</div>
+                                </div>
+                                <div class="card-service">
+                                    <div class="card-service__image">
+                                        <img src="img/main/StepByStep/number-4.png" alt="number 4">
+                                    </div>
+                                    <div class="card-service__title">Traccia i tuoi progressi</div>
+                                    <div class="card-service__text">Aggiornate regolarmente i vostri progressi nell'app
+                                        per vedere come state procedendo verso i vostri obiettivi.</div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </section>
