--- a/webVersione/index.html
+++ b/webVersione/index.html
@@ -15,16 +15,17 @@
             <header class="header">
                 <menu class="header__menu menu">
                     <div class="menu__logo logo">
-                        <img src="img/logo/logo.svg" alt="logo">
+                        <a href="index.html"><img src="img/logo/logo.png" alt="logo"></a>
                     </div>
                     <ul class="menu__items">
-                        <li class="menu__item"><a href="#">Casa</a></li>
-                        <li class="menu__item"><a href="#">Formazione</a></li>
-                        <li class="menu__item"><a href="#">Contatti</a></li>
+                        <!-- <li class="menu__item"><a class="link" href="#">Casa</a></li> -->
+                        <li class="menu__item"><a class="link" href="#StepByStep">Come iniziare</a></li>
+                        <li class="menu__item"><a class="link" href="#benefits">Benefici</a></li>
+                        <!-- <li class="menu__item"><a class="link" href="#">Contatti</a></li> -->
                     </ul>
-                    <div class="menu__burger">
+                    <!-- <div class="menu__burger">
                         <img src="img/ico/burgerMenu.svg" alt="menu">
-                    </div>
+                    </div> -->
                 </menu>
             </header>
 
@@ -45,12 +46,14 @@
                                     </svg>
                                     <span>Iscriviti ora</span>
                                 </button>
-                                <button class="btn btn__white">
-                                    <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
-                                        <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
-                                        <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
-                                    </svg>
-                                    <span>Saperne di più</span>
+                                <button class="btn btn__white" type="button">
+                                    <a href="#benefits">
+                                        <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
+                                            <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
+                                            <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
+                                        </svg>
+                                        <span>Saperne di più</span>
+                                    </a>
                                 </button>
                             </div>
                         </div>
@@ -63,13 +66,13 @@
                     </div>
                 </section>
 
-                <section class="main__StepByStep block-StepByStep">
+                <section class="main__StepByStep block-StepByStep " id="StepByStep">
                     <div class="block-StepByStep__container">
                         <div class="block-StepByStep__titles titles-main">
                             <h3 class="titles-main__subTitle">Passo dopo passo</h3>
                             <h2 class="titles-main__title">Come iniziare</h2>
                         </div>
-                        <div class="block-StepByStep__cards ">
+                        <div class="block-StepByStep__cards">
                             <div class="cards-services">
                                 <div class="card-service">
                                     <div class="card-service__image">
@@ -111,6 +114,75 @@
                                 </div>
                             </div>
 
+                        </div>
+                    </div>
+                </section>
+
+                <section class="main__benefits block-benefits" id="benefits">
+                    <div class="block-benefits__container">
+                        <div class="banefit-card cntChangeBlock">
+                            <div class="banefit-card__image brRadiusBottomRight left">
+                                <img src="img/main/benefits/01.webp" alt="Schede di formazione individuale">
+                            </div>
+                            <div class="banefit-card__titles titles-main right">
+                                <h3 class="titles-main__subTitle">Benefici per la salute</h3>
+                                <h2 class="titles-main__title">Schede di formazione individuale</h2>
+                                <p class="titles-main__text">Create piani di allenamento completamente personalizzati in
+                                    base ai vostri obiettivi e alle vostre esigenze. Scegliete tra un'ampia gamma di
+                                    esercizi aerobici e anaerobici per creare il programma di allenamento perfetto.</p>
+                            </div>
+                        </div>
+                        <div class="banefit-card">
+                            <div class="banefit-card__titles titles-main">
+                                <h3 class="titles-main__subTitle">Migliorare l'umore</h3>
+                                <h2 class="titles-main__title">Personalizzazione completa dell'allenamento</h2>
+                                <p class="titles-main__text">Specificate il numero di serie, ripetizioni e periodi di
+                                    riposo tra un approccio e l'altro per ogni esercizio, per ottenere il massimo
+                                    effetto. Personalizzate manualmente ogni aspetto dell'allenamento per adattarlo
+                                    esattamente alle vostre preferenze.</p>
+                            </div>
+                            <div class="banefit-card__image brRadiusTopLeft brRadiusBottomLeft  ">
+                                <img src="img/main/benefits/02.webp" alt="Personalizzazione completa dell'allenamento">
+                            </div>
+                        </div>
+                        <div class="banefit-card  cntChangeBlock">
+                            <div class="banefit-card__image brRadiusTopRight brRadiusBottomRight left">
+                                <img src="img/main/benefits/03.webp" alt="Aumento progressivo del carico">
+                            </div>
+                            <div class="banefit-card__titles titles-main right">
+                                <h3 class="titles-main__subTitle">Benefici per la salute</h3>
+                                <h2 class="titles-main__title">Aumento progressivo del carico</h2>
+                                <p class="titles-main__text">L'applicazione consente di regolare facilmente il livello
+                                    di difficoltà degli esercizi, aiutandovi ad aumentare gradualmente il carico di
+                                    lavoro man mano che la vostra forma fisica aumenta.</p>
+                            </div>
+                        </div>
+                        <div class="banefit-card">
+                            <div class="banefit-card__titles titles-main">
+                                <h3 class="titles-main__subTitle">Migliorare la salute</h3>
+                                <h2 class="titles-main__title">Facile accesso alle informazioni sull'allenamento</h2>
+                                <p class="titles-main__text">Tutte le mappe di allenamento vengono memorizzate nell'app,
+                                    consentendo di accedere rapidamente alle informazioni necessarie durante gli
+                                    allenamenti. È il modo perfetto per avere sempre a portata di mano il vostro
+                                    programma di allenamento, ovunque vi troviate.</p>
+                            </div>
+                            <div class="banefit-card__image brRadiusTopLeft brRadiusBottomLeft">
+                                <img src="img/main/benefits/04.webp"
+                                    alt="Facile accesso alle informazioni sull'allenamento">
+                            </div>
+                        </div>
+                        <div class="banefit-card cntChangeBlock">
+                            <div class="banefit-card__image brRadiusTopRight left">
+                                <img src="img/main/benefits/05.webp" alt="sport man 1">
+                            </div>
+                            <div class="banefit-card__titles titles-main right">
+                                <h3 class="titles-main__subTitle">Benefici per la salute</h3>
+                                <h2 class="titles-main__title">Motivazione e mantenimento dei progressi</h2>
+                                <p class="titles-main__text">L'applicazione include funzioni per tracciare i vostri
+                                    progressi, consentendovi di vedere i miglioramenti della vostra forma fisica e di
+                                    aumentare la vostra motivazione. Registrate i vostri risultati e cercate di
+                                    raggiungere nuovi obiettivi con Palestriamoci.</p>
+                            </div>
                         </div>
                     </div>
                 </section>
