add style for sign-in

--- a/webVersione/index.html
+++ b/webVersione/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>__Palestriamoci</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/logo/logoRed.ico">
 </head>
 
 <body>
@@ -42,7 +43,7 @@
                             basati su obiettivi, livello di forma e preferenze.</p>
                         <div class="block-main__buttons">
                             <button class="btn btn__red">
-                                <a href="sign-in.html">
+                                <a href="sign-in.html#logo_log-in">
                                     <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
                                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
@@ -193,9 +194,18 @@
         </main>
         <footer class="footer">
             <div class="footer__container">
-                <div class="footer__logo logo">
-                    <a href="#header"><img src="img/logo/logo.png" alt="logo"></a>
-
+                <div class="footer__icons">
+                    <div class="footer__logo logo">
+                        <a href="#header"><img src="img/logo/logo.png" alt="logo"></a>
+                    </div>
+                    <div class="social-contacts">
+                        <a target="_blank" href="https://www.youtube.com/"><img src="img/ico/social/youtube.svg"
+                                alt="YouTube"></a>
+                        <a target="_blank" href="https://www.facebook.com/"><img src="img/ico/social/facebook.svg"
+                                alt="facebook"></a>
+                        <a target="_blank" href="https://www.instagram.com/"><img src="img/ico/social/instagram.svg"
+                                alt="instagram"></a>
+                    </div>
                 </div>
                 <p class="footer__topText">Palestriamoci è un'app di fitness che offre allenamenti personalizzati per
                     appassionati e atleti, adattandosi a obiettivi e preferenze.</p>
