--- a/webVersione/log-in.html
+++ b/webVersione/log-in.html
@@ -12,6 +12,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/log-in.css">
+  <link rel="icon" href="img/logo/logoRed.ico">
 </head>
 
 <body>
@@ -57,7 +58,8 @@
         </div>
       </div>
       <div id="link_sing-in">
-        <a href="sign-in.html">Non hai un account? <span class="color-red">Registrati</span></a>
+        <span>Non hai un account? </span><a class="link" href="sign-in.html#logo_log-in"><span
+            class="color-red ">Registrati</span></a>
       </div>
       <div class="col-auto container btn_log-in" id="btn_accedi">
         <button type="submit" class="btn btn__red mb-3">Accedi</button>
