--- a/webVersione/sign-in.html
+++ b/webVersione/sign-in.html
@@ -81,9 +81,17 @@
 
     <footer class="footer">
       <div class="footer__container">
-        <div class="footer__logo logo">
-          <!-- <a href="#header"><img src="img/logo/logo.png" alt="logo"></a> -->
-
+        <div class="footer__icons">
+          <div class="footer__logo logo">
+            <a href="#header"><img src="img/logo/logo.png" alt="logo"></a>
+          </div>
+          <div class="social-contacts">
+            <a target="_blank" href="https://www.youtube.com/"><img src="img/ico/social/youtube.svg" alt="YouTube"></a>
+            <a target="_blank" href="https://www.facebook.com/"><img src="img/ico/social/facebook.svg"
+                alt="facebook"></a>
+            <a target="_blank" href="https://www.instagram.com/"><img src="img/ico/social/instagram.svg"
+                alt="instagram"></a>
+          </div>
         </div>
         <p class="footer__topText">Palestriamoci è un'app di fitness che offre allenamenti personalizzati per
           appassionati e atleti, adattandosi a obiettivi e preferenze.</p>
