--- a/webVersione/sign-in.html
+++ b/webVersione/sign-in.html
@@ -82,10 +82,8 @@
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__icons">
-          <div class="footer__logo logo">
-            <a href="#header"><img src="img/logo/logo.png" alt="logo"></a>
-          </div>
           <div class="social-contacts">
+            <a class="logo-footer" href="#header"><img src="img/logo/logoRed.png" alt="logo"></a>
             <a target="_blank" href="https://www.youtube.com/"><img src="img/ico/social/youtube.svg" alt="YouTube"></a>
             <a target="_blank" href="https://www.facebook.com/"><img src="img/ico/social/facebook.svg"
                 alt="facebook"></a>
