added password maxlength and password minlength

--- a/webVersione/log-in.html
+++ b/webVersione/log-in.html
@@ -48,7 +48,7 @@
       <div class="col-auto">
         <div class="col-8">
           <label for="inputPassword6" class="col-form-label">Password</label>
-          <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpInline"
+          <input type="password" id="inputPassword" maxlength="20" minlength="8"  class="form-control" aria-describedby="passwordHelpInline"
             placeholder="Must be 8-20 characters long.">
           <span class="material-symbols-outlined visibility" type="button"  onclick="showPwd()" value="Mostra/nascondi password">
               visibility
