add sito chi siamo

--- a/webVersione/index.html
+++ b/webVersione/index.html
@@ -23,7 +23,7 @@
                         <!-- <li class="menu__item"><a class="link" href="#">Casa</a></li> -->
                         <li class="menu__item"><a class="link" href="#StepByStep">Come iniziare</a></li>
                         <li class="menu__item"><a class="link" href="#benefits">Benefici</a></li>
-                        <!-- <li class="menu__item"><a class="link" href="#">Contatti</a></li> -->
+                        <li class="menu__item"><a class="link" href="chi-siamo.html#dreamTeam">Chi siamo</a></li>
                     </ul>
                     <div class="menu__burger">
                         <a href="log-in.html#logo_log-in"><img src="img/ico/login.png" alt="menu"></a>
@@ -85,10 +85,10 @@
                                 </div>
                                 <div class="card-service__title">Scarica l'app o accedi</div>
                                 <div class="card-service__text">Palestriamoci è disponibile per il download su
-                                    <a href="#" class="link-red">Android</a> o sul sito web. È sufficiente
+                                    <a href="#" class="color-red">Android</a> o sul sito web. È sufficiente
                                     installarla sul proprio
                                     dispositivo mobile
-                                    ed effettuare una rapida registrazione o il <a href="#" class="link-red">login</a>
+                                    ed effettuare una rapida registrazione o il <a href="#" class="color-red">login</a>
                                     attraverso il sito web.
                                 </div>
                             </div>
