--- a/webVersione/index.html
+++ b/webVersione/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>__Palestriamoci</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/log-in.css">
+    <link rel="stylesheet" href="css/itc-slider.css">
     <link rel="icon" href="img/logo/logoRed.ico">
+    <script src="js/itc-slider.js" defer></script>
 </head>
 
 <body>
@@ -23,7 +26,7 @@
                         <!-- <li class="menu__item"><a class="link" href="#">Casa</a></li> -->
                         <li class="menu__item"><a class="link" href="#StepByStep">Come iniziare</a></li>
                         <li class="menu__item"><a class="link" href="#benefits">Benefici</a></li>
-                        <li class="menu__item"><a class="link" href="chi-siamo.html#dreamTeam">Chi siamo</a></li>
+                        <li class="menu__item"><a class="link" href="#dreamTeam">Chi siamo</a></li>
                     </ul>
                     <div class="menu__burger">
                         <a href="log-in.html#logo_log-in"><img src="img/ico/login.png" alt="menu"></a>
@@ -177,7 +180,7 @@
                         </div>
                     </div>
                     <div class="banefit-card cntChangeBlock">
-                        <div class="banefit-card__image brRadiusTopRight left">
+                        <div class="banefit-card__image brRadiusTopRight left brRadiusBottomRight">
                             <img src="img/main/benefits/05.webp" alt="sport man 1">
                         </div>
                         <div class="banefit-card__titles titles-main right text-align-right">
@@ -187,6 +190,117 @@
                                 progressi, consentendovi di vedere i miglioramenti della vostra forma fisica e di
                                 aumentare la vostra motivazione. Registrate i vostri risultati e cercate di
                                 raggiungere nuovi obiettivi con Palestriamoci.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="main__squadra squadra-main">
+                <div class="squadra-main__container">
+                    <div class="main__benvenuto">
+                        <div class="flex" id="logo_log-in">
+                            <img src="img/logo/logo.png" style="width: 200px;" alt="Logo">
+                        </div>
+                        <h3 class="access_text" id="dreamTeam">La nostra <span class="color-red">__squadra</span> </h3>
+                    </div>
+                    <div class="main__carousel carousel">
+                        <div class="itc-slider" data-slider="itc-slider" data-loop="true" data-autoplay="false"
+                            data-interval="4000">
+                            <div class="itc-slider-wrapper">
+                                <div class="itc-slider-items">
+                                    <div class="itc-slider-item">
+                                        <!-- Контент 1 слайда -->
+                                        <div class="itc-slider-item__image">
+                                            <img class="img-test" src="img/imgCreatori/Vittorio.jpg"
+                                                alt="Vittorio Lungo">
+                                        </div>
+                                        <div class="itc-slider-item__description">
+                                            <div class="itc-slider-item__name">Vittorio Lungo</div>
+                                            <div class="itc-slider-item__position">Creatore di idee, struttura delle
+                                                applicazioni, Database,
+                                                Backend
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="itc-slider-item">
+                                        <!-- Контент 2 слайда -->
+                                        <div class="itc-slider-item__image">
+                                            <img class="img-test" src="img/imgCreatori/Riccardo.jpg"
+                                                alt="Riccardo Renato Falchetto">
+                                        </div>
+                                        <div class="itc-slider-item__description">
+                                            <div class="itc-slider-item__name">Riccardo Renato Falchetto</div>
+                                            <div class="itc-slider-item__position">Struttura delle applicazioni,
+                                                Database,
+                                                Backend</div>
+                                        </div>
+                                    </div>
+                                    <div class="itc-slider-item">
+                                        <!-- Контент 3 слайда -->
+                                        <div class="itc-slider-item__image">
+                                            <img class="img-test" src="img/imgCreatori/Mykola.jpg" alt="Mykola Kartsev">
+                                        </div>
+                                        <div class="itc-slider-item__description">
+                                            <div class="itc-slider-item__name">Mykola Kartsev</div>
+                                            <div class="itc-slider-item__position">Frontend: HTML, CSS, Javascript</div>
+                                        </div>
+                                    </div>
+                                    <div class="itc-slider-item">
+
+                                        <div class="itc-slider-item__image">
+                                            <img class="img-test" src="img/imgCreatori/Michele.jpg"
+                                                alt="Michele Procacciante">
+                                        </div>
+                                        <div class="itc-slider-item__description">
+                                            <div class="itc-slider-item__name">Michele Procacciante</div>
+                                            <div class="itc-slider-item__position">Frontend: HTML, CSS, Javascript</div>
+                                        </div>
+                                    </div>
+                                    <div class="itc-slider-item">
+
+                                        <div class="itc-slider-item__image">
+                                            <img class="img-test" src="img/imgCreatori/Samuele.jpeg" alt="">
+                                        </div>
+                                        <div class="itc-slider-item__description">
+                                            <div class="itc-slider-item__name">Samuele Filincieri</div>
+                                            <div class="itc-slider-item__position">Design and Code for Android APP</div>
+                                        </div>
+
+                                    </div>
+
+                                    <div class="itc-slider-item">
+
+                                        <div class="itc-slider-item__image">
+                                            <img class="img-test" src="img/imgCreatori/Franchesco.jpg"
+                                                alt="Francesco Pirollo">
+                                        </div>
+                                        <div class="itc-slider-item__description">
+                                            <div class="itc-slider-item__name">Francesco Pirollo</div>
+                                            <div class="itc-slider-item__position">Ispirazione, analisi del codice e
+                                                della
+                                                struttura</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Кнопки для перехода к предыдущему и следующему слайду -->
+                            <button class="itc-slider-btn itc-slider-btn-prev"></button>
+                            <button class="itc-slider-btn itc-slider-btn-next"></button>
+
+                            <ol class="itc-slider-indicators">
+                                <!-- data-slide-to="0" – для перехода к 1 слайду -->
+                                <li class="itc-slider-indicator" data-slide-to="0"></li>
+                                <!-- data-slide-to="1" – для перехода к 2 слайду -->
+                                <li class="itc-slider-indicator" data-slide-to="1"></li>
+                                <!-- data-slide-to="2" – для перехода к 3 слайду -->
+                                <li class="itc-slider-indicator" data-slide-to="2"></li>
+                                <!-- data-slide-to="3" – для перехода к 4 слайду -->
+                                <li class="itc-slider-indicator" data-slide-to="3"></li>
+                                <!-- data-slide-to="4" – для перехода к 5 слайду -->
+                                <li class="itc-slider-indicator" data-slide-to="4"></li>
+                                <!-- data-slide-to="5" – для перехода к 6 слайду -->
+                                <li class="itc-slider-indicator" data-slide-to="5"></li>
+                            </ol>
                         </div>
                     </div>
                 </div>
