add and fix site account

--- a/webVersione/log-in.html
+++ b/webVersione/log-in.html
@@ -34,13 +34,12 @@
         </menu>
       </div>
     </header>
-    <main class="main">
-      <div class="flex" id="logo_log-in">
-        <img src="img/logo/logo.png" style="width: 200px;" alt="Logo">
-
+    <main class="main__log-in">
+      <div class="flex">
+        <img src="img/logo/logo.png" style="width: 200px;" alt="Logo" id="logo_log-in">
       </div>
       <h1 class="access_text">Benvenuto su <span class="color-red">__Palestriamoci</span> </h1>
-      <form class="container col-5 " id="container-form">
+      <form class="container col-5 " id="container-log-in">
         <div class="col-auto">
           <div class="col-8">
             <label for="exampleFormControlInput1" class="col-form-label" id="email">Email address</label>
