--- a/webVersione/sign-in.html
+++ b/webVersione/sign-in.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/log-in.css">
   <link rel="icon" href="img/logo/logoRed.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
@@ -33,8 +34,8 @@
         </menu>
       </div>
     </header>
-    <div class="flex" id="logo_log-in">
-      <img src="img/logo/logo.png" style="width: 200px;" alt="Logo">
+    <div class="flex">
+      <img src="img/logo/logo.png" style="width: 200px;" alt="Logo" id="logo_log-in">
 
     </div>
     <h1 class="access_text">Benvenuto su <span class="color-red">__Palestriamoci</span> </h1>
@@ -62,10 +63,11 @@
         </div>
         <div class="col-8">
           <label for="inputPassword6" class="col-form-label">Password</label>
-          <input type="password" id="inputPassword" maxlength="20" minlength="8" class="form-control" aria-describedby="passwordHelpInline"
-            placeholder="Must be 8-20 characters long.">
-           <span class="material-symbols-outlined visibility" type="button"  onclick="showPwd()" value="Mostra/nascondi password">
-              visibility
+          <input type="password" id="inputPassword" maxlength="20" minlength="8" class="form-control"
+            aria-describedby="passwordHelpInline" placeholder="Must be 8-20 characters long.">
+          <span class="material-symbols-outlined visibility" type="button" onclick="showPwd()"
+            value="Mostra/nascondi password">
+            visibility
           </span>
         </div>
       </div>
@@ -78,19 +80,6 @@
 
       </div>
     </form>
-    <script>
-      function showPwd() {
-          var input = document.getElementById('inputPassword');
-          if (input.type === "password") {
-            input.type = "text";
-          } else {
-            input.type = "password";
-          }
-        }
-    </script>
-
-
-
 
     <footer class="footer">
       <div class="footer__container">
@@ -112,6 +101,17 @@
       </div>
     </footer>
   </div>
+
+  <script>
+    function showPwd() {
+      var input = document.getElementById('inputPassword');
+      if (input.type === "password") {
+        input.type = "text";
+      } else {
+        input.type = "password";
+      }
+    }
+  </script>
 </body>
 
 </html>
